Fixed part of button in overflow not working

--- a/client/src/css/hexcss.css
+++ b/client/src/css/hexcss.css
@@ -7,6 +7,7 @@
     border-bottom: 1px solid transparent;
     width: 100%;
     padding-bottom: 86.602%;
+    pointer-events: none;
 }
 
 .tileListItem * {
@@ -24,6 +25,7 @@
 
 .tileContainer, .tileContainer * {
     position: absolute;
+    pointer-events: all;
 }
 
 .tileContainer {
